@@ -853,6 +853,12 @@ ul.nav-menu ul.sub-menu li, ul.nav-menu ul.children li, ul.nav-menu ul, ul.nav-m
 	padding: 0 0 0 15px;
 }
 
+/** Monster be gone! - Special case many level menu in sidebar */
+.widget_nav_menu ul.sub-menu li > ul > li > ul > li > ul > li {
+	background: none;
+	margin-left: -20px;
+}
+
 /** End: Menu Related Elements ---------------------------------------------- */
 
 /** === Breadcrumbs === ----------------------------------------------------- */
